.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Employee_Detail__c.object
<CustomObject>
    <description>Used to record Employee details</description>
    <fields>
        <fullName>Current_Compensation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pulls the current compensation from Comp - via Process builder to allow data loader uploads to link to comp record without a download required, should be hidden from the user</description>
        <label>Current Compensation</label>
        <referenceTo>xcdhcm__Compensation__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Add_Job_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SYSTEM: This field is used to create New Employees.</description>
        <label>zAdd job role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Adjustments_required__c</fullName>
        <inlineHelpText>Note any adjustments required by the Employer or Employee in relation to the medical condition</inlineHelpText>
        <label>Adjustments required</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Applicant_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>xcdhcm__Applicant__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Blankspace__c</fullName>
        <label>Blankspace</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Companies__c</fullName>
        <description>Company of the Employee&apos;s current job role</description>
        <formula>xcdhcm__Job_Role__r.xcdhcm__Companies__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company (role)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated in joiner process</description>
        <inlineHelpText>Company where contract of employment is written - generally the Company which the Employee initially joined</inlineHelpText>
        <label>Company (contract)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>xcdhcm__Company__c.xcdhcm__Active__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Show all results also displays records which are no longer in use</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Company__c</referenceTo>
        <relationshipLabel>Employee</relationshipLabel>
        <relationshipName>Employee_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Continuous_Service_Date_Start_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zContinuous service date = start date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Continuous_Service_Date__c</fullName>
        <label>Continuous service date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Contract_end_date__c</fullName>
        <inlineHelpText>For a Fixed Term Contract or Agency worker, this field records the end date of their latest Job role</inlineHelpText>
        <label>xContract end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Current_employee__c</fullName>
        <formula>AND(OR( ISBLANK( xcdhcm__Leaving_Date__c ) , xcdhcm__Leaving_Date__c &gt;  TODAY()), xcdhcm__Start_Date__c &lt; TODAY())</formula>
        <label>Current employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Daily_rate_of_pay__c</fullName>
        <description>Used in calculating cost of sickness</description>
        <label>System: daily rate of pay</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Date_notice_of_termination_given__c</fullName>
        <label>Date notice of termination given</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Declared_medical_conditions__c</fullName>
        <inlineHelpText>Note any medical conditions which may affect the Employee&apos;s ability to deliver in their role</inlineHelpText>
        <label>Declared medical conditions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Department__c</fullName>
        <description>Displays the Organisation Unit linked to the current main Job Role</description>
        <formula>xcdhcm__Job_Role__r.xcdhcm__Department_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organisation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_Number__c</fullName>
        <label>Employee number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employer__c</fullName>
        <description>This field is used in the reports to add filter.  It shows the Employer associated with the main Job Role</description>
        <formula>xcdhcm__Job_Role__r.xcdhcm__Companies__r.xcdhcm__Employer_name__c</formula>
        <label>Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employment_Status__c</fullName>
        <description>Do not change the picklist values for FTC, Contractor or Agency.  These are used in the code which updates Contract end date and/or in Contract end date reminder workflows</description>
        <label>xEmployment status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent</fullName>
                    <default>true</default>
                    <label>Permanent</label>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Agency temp</fullName>
                </value>
                <value>
                    <fullName>FTC</fullName>
                </value>
                <value>
                    <fullName>Interim</fullName>
                </value>
                <value>
                    <fullName>Apprentice</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Employment_Type__c</fullName>
        <formula>TEXT(xcdhcm__Job_Role__r.xcdhcm__Employment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Note this is set on Job Role</inlineHelpText>
        <label>Employment type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employmentstatusformula__c</fullName>
        <formula>text(xcdhcm__Job_Role__r.xcdhcm__Employment_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employment status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Fire_Marshall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fire marshall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__First_Aider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First aider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Gender__c</fullName>
        <formula>text(xcdhcm__Personal_L__r.xcdhcm__Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Home_Worker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home worker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Hours_remaining__c</fullName>
        <description>&quot;Show hours&apos; annual leave remaining from the current Leave Summary record for Employees booking Leave in Hours.  Used in Employee Snapshot reports.  Populated by Rollups&quot;</description>
        <label>Hours remaining</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__IsManager__c</fullName>
        <formula>IF(xcdhcm__User__r.Profile.Name  = &apos;HRMS Manager&apos;, &apos;Yes&apos;,
(IF(xcdhcm__User__r.Profile.Name  = &apos;HRMS Team Leader&apos;, &apos;Yes&apos;,&apos;No&apos;)
))</formula>
        <label>IsManager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Job_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to Employee&apos;s current main job role</description>
        <label>Job role</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This Job Role does not match this Employee.</errorMessage>
            <filterItems>
                <field>xcdhcm__Job_Role__c.xcdhcm__Employee_Details__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Job_Role__c</referenceTo>
        <relationshipLabel>Employee</relationshipLabel>
        <relationshipName>Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Job_role_comparison_to_user__c</fullName>
        <description>Compares employees Job role to the employee user</description>
        <formula>&quot;Job title: &quot; &amp; xcdhcm__Job_Role__r.Name &amp; &quot; | &quot; &amp; xcdhcm__User__r.Title 
&amp;BR()&amp; 

&quot;Manager: &quot; &amp;  xcdhcm__Job_Role__r.xcdhcm__Manager__r.FirstName  &amp; &quot; | &quot; &amp; 
xcdhcm__User__r.Manager.FirstName &amp; &quot; &quot; &amp; 
xcdhcm__User__r.Manager.LastName 
&amp;BR()&amp; 

&quot;Department: &quot; &amp; xcdhcm__Job_Role__r.xcdhcm__Department_L__r.Name &amp; &quot; | &quot; &amp; xcdhcm__User__r.Department 
&amp;BR()&amp; 

&quot;Location: &quot; &amp; xcdhcm__Job_Role__r.xcdhcm__Location__r.Name &amp; &quot; | &quot; &amp; xcdhcm__User__r.xcdhcm__Location__c 
&amp;BR()&amp; 

&quot;Company: &quot; &amp; xcdhcm__Job_Role__r.xcdhcm__Companies__r.Name &amp; &quot; | &quot; &amp; xcdhcm__User__r.CompanyName</formula>
        <label>Job role comparison to user</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__LOS_Anniversary__c</fullName>
        <description>Anniversary date for length of service calculations - vs. continuous service date</description>
        <formula>DATE( YEAR( TODAY() ) , MONTH( xcdhcm__Continuous_Service_Date__c ) , DAY( xcdhcm__Continuous_Service_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anniversary date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__LOS_calc_date__c</fullName>
        <description>This field was used in calculation of Length of Service - now deprecated</description>
        <label>xLOS calc date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Last_working_day__c</fullName>
        <label>Last working day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leave_remaining__c</fullName>
        <description>&quot;Shows days&apos; annual leave remaining from the current Leave Summary record for Employees booking Leave in Days.  Used in Employee Snapshot reports.  Populated by Rollups&quot;</description>
        <label>Leave remaining</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaver_before_retention_period__c</fullName>
        <description>Where the employee is a leaver, records true if the employee&apos;s leaving date was before the period for which records should be retained under the Company&apos;s data retention policy</description>
        <formula>If(
  not(isblank(xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c)), 
  xcdhcm__Leaving_Date__c &lt; xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c, 
  xcdhcm__Leaving_Date__c &lt; xcdhcm__Company__r.xcdhcm__HMRC_data_retention_threshold__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies if the employee left the company before the period for which records should be retained under GDPR data retention policy</inlineHelpText>
        <label>Leaver before data retention period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaver_status__c</fullName>
        <description>Use to identify if leaver data has been submitted to and accepted by HMRC.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Leaver</fullName>
                    <default>true</default>
                    <label>Leaver</label>
                </value>
                <value>
                    <fullName>RTI leaver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaver_type__c</fullName>
        <label>Leaver type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
                <value>
                    <fullName>Involuntary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaving_Date__c</fullName>
        <inlineHelpText>Leaving date also sets the End date for the Employee&apos;s Job role, Compensation and Benefits</inlineHelpText>
        <label>Leaving date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaving_date_recorded__c</fullName>
        <description>Populated by workflow
Used to track when this leaving date was entered, to drive reporting on late-processed leavers</description>
        <label>Leaving date recorded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Length_of_Service_Formula__c</fullName>
        <formula>If( xcdhcm__Start_Date__c &gt; today(),&quot;0 years &amp; 0 months&quot;,
if(
or(isblank(xcdhcm__Leaving_Date__c),today() &lt; xcdhcm__Leaving_Date__c),
TEXT(
IF(YEAR(today())= YEAR(xcdhcm__Continuous_Service_Date__c),
0,
IF(MONTH( today() )= MONTH(xcdhcm__Continuous_Service_Date__c),
IF(DAY( today() )&lt; DAY(xcdhcm__Continuous_Service_Date__c),
YEAR( today() )- YEAR(xcdhcm__Continuous_Service_Date__c) - 1,
YEAR( today() )- YEAR(xcdhcm__Continuous_Service_Date__c)),
IF(MONTH( today() )&lt; MONTH(xcdhcm__Continuous_Service_Date__c),
YEAR( today() )- YEAR(xcdhcm__Continuous_Service_Date__c) - 1,
YEAR( today() )- YEAR(xcdhcm__Continuous_Service_Date__c))
)
)
) &amp; &quot; year(s) &amp; &quot; &amp;
TEXT(
IF(OR(YEAR( today() )= YEAR(xcdhcm__Continuous_Service_Date__c),YEAR(today()) &lt; YEAR(xcdhcm__Continuous_Service_Date__c)),
IF(MONTH( today() )= MONTH(xcdhcm__Continuous_Service_Date__c),
0, 
IF(DAY( today() )&lt; DAY(xcdhcm__Continuous_Service_Date__c),
MONTH( today() )- MONTH(xcdhcm__Continuous_Service_Date__c) - 1,
MONTH( today() )- MONTH(xcdhcm__Continuous_Service_Date__c))
),
IF(MONTH( today() )= MONTH(xcdhcm__Continuous_Service_Date__c),
IF(DAY( today() )&lt; DAY(xcdhcm__Continuous_Service_Date__c),
11,
0),
IF(MONTH( today() )&gt; MONTH(xcdhcm__Continuous_Service_Date__c),
IF(DAY( today() )&lt; DAY(xcdhcm__Continuous_Service_Date__c),
MONTH( today() )- MONTH(xcdhcm__Continuous_Service_Date__c) - 1,
MONTH( today() )- MONTH(xcdhcm__Continuous_Service_Date__c)),
IF(DAY( today() )&lt; DAY(xcdhcm__Continuous_Service_Date__c),
11 - (MONTH(xcdhcm__Continuous_Service_Date__c) - MONTH( today() )),
12 - (MONTH(xcdhcm__Continuous_Service_Date__c) - MONTH( today() )))
)
)
)
) &amp; &quot; month(s)&quot;,
&quot;No longer with Company&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length of service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Length_of_service_on_exit__c</fullName>
        <formula>if(
isblank(xcdhcm__Leaving_Date__c),
null,
(
TEXT( 
IF(YEAR(  xcdhcm__Leaving_Date__c  )= YEAR(xcdhcm__Continuous_Service_Date__c), 
0, 
IF(MONTH( xcdhcm__Leaving_Date__c )= MONTH(xcdhcm__Continuous_Service_Date__c), 
IF(DAY( xcdhcm__Leaving_Date__c )&lt; DAY(xcdhcm__Continuous_Service_Date__c), 
YEAR( xcdhcm__Leaving_Date__c )- YEAR(xcdhcm__Continuous_Service_Date__c) - 1, 
YEAR( xcdhcm__Leaving_Date__c )- YEAR(xcdhcm__Continuous_Service_Date__c)), 
IF(MONTH( xcdhcm__Leaving_Date__c )&lt; MONTH(xcdhcm__Continuous_Service_Date__c), 
YEAR( xcdhcm__Leaving_Date__c )- YEAR(xcdhcm__Continuous_Service_Date__c) - 1, 
YEAR( xcdhcm__Leaving_Date__c )- YEAR(xcdhcm__Continuous_Service_Date__c)) 
) 
) 
) &amp; &quot; year(s) &amp; &quot; &amp; 
TEXT( 
IF(YEAR( xcdhcm__Leaving_Date__c )= YEAR(xcdhcm__Continuous_Service_Date__c), 
IF(MONTH( xcdhcm__Leaving_Date__c )= MONTH(xcdhcm__Continuous_Service_Date__c), 
0, 
IF(DAY( xcdhcm__Leaving_Date__c )&lt; DAY(xcdhcm__Continuous_Service_Date__c), 
MONTH( xcdhcm__Leaving_Date__c )- MONTH(xcdhcm__Continuous_Service_Date__c) - 1, 
MONTH( xcdhcm__Leaving_Date__c )- MONTH(xcdhcm__Continuous_Service_Date__c)) 
), 
IF(MONTH( xcdhcm__Leaving_Date__c )= MONTH(xcdhcm__Continuous_Service_Date__c), 
IF(DAY( xcdhcm__Leaving_Date__c )&lt; DAY(xcdhcm__Continuous_Service_Date__c), 
11, 
0), 
IF(MONTH( xcdhcm__Leaving_Date__c )&gt; MONTH(xcdhcm__Continuous_Service_Date__c), 
IF(DAY( xcdhcm__Leaving_Date__c )&lt; DAY(xcdhcm__Continuous_Service_Date__c), 
MONTH( xcdhcm__Leaving_Date__c )- MONTH(xcdhcm__Continuous_Service_Date__c) - 1, 
MONTH( xcdhcm__Leaving_Date__c )- MONTH(xcdhcm__Continuous_Service_Date__c)), 
IF(DAY( xcdhcm__Leaving_Date__c )&lt; DAY(xcdhcm__Continuous_Service_Date__c), 
11 - (MONTH(xcdhcm__Continuous_Service_Date__c) - MONTH( xcdhcm__Leaving_Date__c )), 
12 - (MONTH(xcdhcm__Continuous_Service_Date__c) - MONTH( xcdhcm__Leaving_Date__c ))) 
) 
) 
) 
) &amp; &quot; month(s)&quot;
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length of service on exit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__License_User__c</fullName>
        <description>SYSTEM: Used in New Joiner. It denotes if Employee has Salesforce Licence</description>
        <label>Assign SF licence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Local_authority_start_date__c</fullName>
        <inlineHelpText>Date when the employee was first employed by any local authority</inlineHelpText>
        <label>Local authority start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Manager_ID__c</fullName>
        <formula>xcdhcm__User__r.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zManager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Manager__c</fullName>
        <formula>xcdhcm__User__r.Manager.FirstName + &apos; &apos; + xcdhcm__User__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Manager_email1__c</fullName>
        <label>zManager email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Manager_email__c</fullName>
        <formula>xcdhcm__User__r.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__NI_number__c</fullName>
        <formula>xcdhcm__Personal_L__r.xcdhcm__National_insurance_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National insurance number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__No_of_main_jobrole__c</fullName>
        <label>No of main jobrole</label>
        <summaryFilterItems>
            <field>xcdhcm__Job_Role__c.xcdhcm__Main_job_role__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>xcdhcm__Job_Role__c.xcdhcm__Employee_Details__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Notice_period__c</fullName>
        <description>Notice period as defined in employment or service contract</description>
        <inlineHelpText>Notice period as defined in employment or service contract</inlineHelpText>
        <label>Notice period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Notice_period_weeks_months__c</fullName>
        <description>Note - updated using workflow</description>
        <label>Weeks/months</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weeks</fullName>
                    <default>true</default>
                    <label>Weeks</label>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Office_Locations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>xcdhcm__Location__c.xcdhcm__No_longer_in_use__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Search shows currently active locations.  Click Show all results to display also those locations no longer in use</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Location__c</referenceTo>
        <relationshipLabel>Employee</relationshipLabel>
        <relationshipName>Employee_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Offiice_location__c</fullName>
        <description>Do not change the formula. Formula works as it should for - NPPD-572</description>
        <formula>IF(xcdhcm__Job_Role__r.xcdhcm__Main_job_role__c = true, xcdhcm__Job_Role__r.xcdhcm__Location__r.Name,null)</formula>
        <label>Current location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Other_start_date__c</fullName>
        <label>Other start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Out_of_synch_with_user__c</fullName>
        <description>Compares the Employee&apos;s Manager, Dept, Location, Company &amp; Job tilte fields on Job role with the same fields on the User record</description>
        <formula>( 
xcdhcm__Job_Role__r.Name &lt;&gt; xcdhcm__Job_Role__r.xcdhcm__Employee_Details__r.xcdhcm__User__r.Title 
|| 
xcdhcm__Job_Role__r.xcdhcm__Manager__r.Id &lt;&gt; xcdhcm__Job_Role__r.xcdhcm__Employee_Details__r.xcdhcm__User__r.ManagerId 
|| 
xcdhcm__Job_Role__r.xcdhcm__Department_L__r.Name &lt;&gt; xcdhcm__Job_Role__r.xcdhcm__Employee_Details__r.xcdhcm__User__r.Department 
|| 
xcdhcm__Job_Role__r.xcdhcm__Location__r.Name &lt;&gt; xcdhcm__Job_Role__r.xcdhcm__Employee_Details__r.xcdhcm__User__r.xcdhcm__Location__c 
|| 
xcdhcm__Job_Role__r.xcdhcm__Companies__r.Name &lt;&gt; xcdhcm__Job_Role__r.xcdhcm__Employee_Details__r.xcdhcm__User__r.CompanyName 
)</formula>
        <label>Out of synch with user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__P_Contractual_Hours__c</fullName>
        <formula>xcdhcm__Job_Role__r.xcdhcm__Contractual_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contractual hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__P_Job_Title__c</fullName>
        <formula>xcdhcm__User__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pattern_Type__c</fullName>
        <formula>text(xcdhcm__Job_Role__r.xcdhcm__Pattern_Type__c)</formula>
        <label>Pattern type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Payroll_end_date__c</fullName>
        <description>Populated manually in the Leaver process. This is used to determine when an Employee stops appearing as eligible for a Pay Run</description>
        <inlineHelpText>This date will determine the final period in which the Employee will be included in payroll. No payments will be made to the Employee after the pay period which includes this date</inlineHelpText>
        <label>Last pay run</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Payroll_no__c</fullName>
        <label>Payroll no</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Payroll_set_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payroll set up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Payroll_setup_error__c</fullName>
        <label>Payroll setup error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Payroll_start_date__c</fullName>
        <description>Populated by workflow/upload
Used to determine WHAT XCD pays the Employee</description>
        <inlineHelpText>All payments due to the Employee on or after this date are eligible for XCD Payroll</inlineHelpText>
        <label>First XCD pay date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Personal_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Personal</label>
        <referenceTo>xcdhcm__Personal__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Previous_service_record_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will store employee history.</description>
        <label>Previous service record 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>xcdhcm__Employee_Detail__c.xcdhcm__Leaving_Date__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Previous_service_record_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will store employee history.</description>
        <label>Previous service record 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>xcdhcm__Employee_Detail__c.xcdhcm__Leaving_Date__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipLabel>Employees (Previous service record 2)</relationshipLabel>
        <relationshipName>Employees1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Previous_service_record_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will store employee history.</description>
        <label>Previous service record 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>xcdhcm__Employee_Detail__c.xcdhcm__Leaving_Date__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipLabel>Employees (Previous service record 3)</relationshipLabel>
        <relationshipName>Employees2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Probation_Period__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check if on probation</inlineHelpText>
        <label>On probation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Probation_WF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to trigger probation TD WF 
It is used in these WFs 
TD: Request and reminder to complete Probationary Review workflow 
System: Adds Manager appointment date on Employee when new Manager added</description>
        <label>System: Probation WF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Probation_period_end_date__c</fullName>
        <description>Date on which probation period ends.  Can be extended.  Updated after probation review completed</description>
        <label>Probation period end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Profile__c</fullName>
        <formula>xcdhcm__User__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reason_Leaving__c</fullName>
        <label>Reason for leaving</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Career Opportunities</fullName>
                </value>
                <value>
                    <fullName>Change in Career Path</fullName>
                </value>
                <value>
                    <fullName>Death in service</fullName>
                </value>
                <value>
                    <fullName>End of contract</fullName>
                </value>
                <value>
                    <fullName>Lack of Training &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Less Stress or Travel</fullName>
                </value>
                <value>
                    <fullName>Not returning from maternity leave</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Redundancy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Reason_for_leaving__c</fullName>
        <label>Leaving reason notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Rejoiner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to enable Rejoiner fieldset</description>
        <label>Rejoiner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Sick_days_last_12_months__c</fullName>
        <label>Sick days - last 12 months</label>
        <summarizedField>xcdhcm__Leave_Summary__c.xcdhcm__Total_number_of_Sick_Days__c</summarizedField>
        <summaryForeignKey>xcdhcm__Leave_Summary__c.xcdhcm__Employee_Details__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Start_Date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Start_date_in_country__c</fullName>
        <description>Used within the paid leave system to record the date an Employee moved to a country where paid leave is earned</description>
        <label>Start date in country</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Status__c</fullName>
        <description>Identifies if an Employee is Active or Inactive in the HR system</description>
        <formula>IF(
   ISPICKVAL( xcdhcm__User__r.xcdhcm__User__c ,&apos;Active&apos;),
   &apos;Active&apos;,
   &apos;InActive&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HR user status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__System_New_Manager__c</fullName>
        <defaultValue>true</defaultValue>
        <description>xx deprecated System field
Uncheck then check when Manager changes</description>
        <label>xSystem New Change Manager</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>